event section handled, event bubble&delegate added

--- a/dom.html
+++ b/dom.html
@@ -67,6 +67,11 @@
         </li>
       </ul>
     </section>
+
+    <!-- Link with External JS Files -->
+    <script src="scripts/script.js"></script>
+
+
     <!-- EVENTS HANDLER -->
     <section>
       <h3>Event Handlers</h3>
@@ -81,14 +86,27 @@
       </ul>
     </section>
 
+    <!-- EVENT BUBBLE -->
+    <section>
+      <h3>Event Bubble</h3>
+      <ul>
+        <li>
+          stop propagation
+        </li>
+      </ul>
+    </section>
+
+    <!-- EVENTS DELEGATE -->
+    <section>
+      <h3>Event Delegate</h3>
+    </section>
+
   </main>
 
   <footer>
 
   </footer>
 
-  <!-- Link with External JS Files -->
-  <script src="scripts/script.js"></script>
 
   <!-- Internal JS Scripts -->
   <script>
