--- a/dom.html
+++ b/dom.html
@@ -15,8 +15,8 @@
   <style>
     @media screen and (max-width: 576px) {
       body {
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: 1%;
+        margin-right: 1%;
       }
     }
   </style>
@@ -82,6 +82,9 @@
         <li>
           document.getElementById('id-name').addEventListener('click', function(){
           });
+        </li>
+        <li>
+          <a href="event.html">Click to find more about Event handlers</a>
         </li>
       </ul>
     </section>
