event bubble added

--- a/dom.html
+++ b/dom.html
@@ -96,6 +96,7 @@
         <li>
           stop propagation
         </li>
+        <li><a href="bubble.html">Click to explore Event Bubble</a></li>
       </ul>
     </section>
 
