event delegate added

--- a/dom.html
+++ b/dom.html
@@ -103,6 +103,9 @@
     <!-- EVENTS DELEGATE -->
     <section>
       <h3>Event Delegate</h3>
+      <ul>
+        <li><a href="delegate.html">Delegate example</a></li>
+      </ul>
     </section>
 
   </main>
