--- a/dom.html
+++ b/dom.html
@@ -66,6 +66,7 @@
           or group of selectors. If no matches are found, null is returned.
         </li>
       </ul>
+      <a href="getElement.html">Click to learn more about Get Elements property</a>
     </section>
 
     <!-- Link with External JS Files -->
